--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
     "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "prisma": "^5.4.2"
